--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -931,8 +931,8 @@ jobs:
           python3 -m pip cache purge
           echo "Available storage:"
           df -h
-          cd ~/.cache
-          du -h -d0 * | sort -h
+          cd /
+          sudo du -h -d1 * | sort -h
       - name: PyTorch Models Tests
         run: |
           export PYTHONPATH=${{ env.MODEL_HUB_TESTS_INSTALL_DIR }}:$PYTHONPATH
@@ -954,5 +954,5 @@ jobs:
         run:  |
           echo "Available storage:"
           df -h
-          cd ~/.cache
-          du -h -d0 * | sort -h
+          cd /
+          sudo du -h -d1 * | sort -h
