removed unused code

--- a/src/bindings/python/CMakeLists.txt
+++ b/src/bindings/python/CMakeLists.txt
@@ -74,15 +74,6 @@ function(ov_check_python_build_conditions)
         message(${message_mode} "Python 3.x Interpreter and Development.Module components are not found. OpenVINO Python API will be turned off (ENABLE_PYTHON is OFF)")
     endif()
 
-    # set(cmake_min_ver 3.18.2)
-    # if(CMAKE_VERSION VERSION_GREATER_EQUAL cmake_min_ver)
-    #     set(python3_suitable_cmake_version ON)
-    # else()
-    #     message(${message_mode} "Python3 cmake module requires cmake ${cmake_min_ver}. Python API is disabled")
-    #     set(python3_suitable_cmake_version OFF)
-    # endif()
-    set(python3_suitable_cmake_version ON)
-
     # check for Cython requirement for build IE API 1.0
     ov_check_pip_packages(REQUIREMENTS_FILE ${ie_build_python_req}
                           RESULT_VAR ie_build_python_req_FOUND
@@ -111,7 +102,7 @@ function(ov_check_python_build_conditions)
     endif()
 
     if((Python3_Development.Module_FOUND OR Python3_Development_FOUND) AND
-        ie_build_python_req_FOUND AND NOT python_debug AND python3_suitable_cmake_version)
+        ie_build_python_req_FOUND AND NOT python_debug)
         set(ENABLE_PYTHON_DEFAULT ON PARENT_SCOPE)
     else()
         set(ENABLE_PYTHON_DEFAULT OFF PARENT_SCOPE)
@@ -202,7 +193,7 @@ ie_dependent_option(ENABLE_WHEEL "Build wheel packages for PyPI" ${ENABLE_WHEEL_
 
 if(NOT ENABLE_PYTHON)
     if(CMAKE_SOURCE_DIR STREQUAL OpenVINOPython_SOURCE_DIR)
-        message(FATAL_ERROR "Python OpenVINO API requirements are not satisfied. Please, install ${ie_build_python_req}")
+        message(FATAL_ERROR "Python OpenVINO API build requirements are not satisfied. Please, install ${ie_build_python_req}")
     else()
         return()
     endif()
