--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -931,7 +931,8 @@ jobs:
           python3 -m pip cache purge
           echo "Available storage:"
           df -h
-          sudo du -h -d1 / > ${{ env.INSTALL_TEST_DIR }}/du_before.txt
+          du -h -d0 /tmp/tmp*
+          du -h -d0 ~/.cache ~/*
       - name: PyTorch Models Tests
         run: |
           export PYTHONPATH=${{ env.MODEL_HUB_TESTS_INSTALL_DIR }}:$PYTHONPATH
@@ -944,7 +945,8 @@ jobs:
         run:  |
           echo "Available storage:"
           df -h
-          sudo du -h -d1 / > ${{ env.INSTALL_TEST_DIR }}/du_after.txt
+          du -h -d0 /tmp/tmp*
+          du -h -d0 ~/.cache ~/*
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v3
@@ -953,6 +955,4 @@ jobs:
           name: test-results-torch-models
           path: |
             ${{ env.INSTALL_TEST_DIR }}/TEST*.html
-            ${{ env.INSTALL_TEST_DIR }}/du_before.txt
-            ${{ env.INSTALL_TEST_DIR }}/du_after.txt
           if-no-files-found: 'error'
