--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -931,7 +931,7 @@ jobs:
           python3 -m pip cache purge
           echo "Available storage:"
           df -h
-          du -h -d0 /tmp/tmp*
+          du -h -d0 /tmp/tmp* || true
           du -h -d0 ~/.cache ~/*
       - name: PyTorch Models Tests
         run: |
@@ -945,7 +945,7 @@ jobs:
         run:  |
           echo "Available storage:"
           df -h
-          du -h -d0 /tmp/tmp*
+          du -h -d0 /tmp/tmp* || true
           du -h -d0 ~/.cache ~/*
 
       - name: Upload Test Results
