--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -526,6 +526,10 @@ jobs:
           mkdir -p ${{ env.INSTALL_DIR }}
           mkdir -p ${{ env.INSTALL_TEST_DIR }}
 
+      - name: Check sudo
+        run: |
+          if [ "$(id -u)" -eq 0 ]; then apt update && apt install sudo; fi
+
       - name: Install git
         run: |
           sudo apt update
@@ -829,24 +833,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-tests-functional-cpu-stamp
 
-      - name: List tests
-        run: |
-          source ${INSTALL_DIR}/setupvars.sh
-          ${INSTALL_TEST_DIR}/ov_cpu_func_tests --gtest_print_time=1 --gtest_filter=*smoke* --gtest_list_tests >> ${INSTALL_TEST_DIR}/test_list_dump.lst
-
-      - name: Upload List of the tests
-        uses: actions/upload-artifact@v3
-        if: ${{ always() }}
-        with:
-          name: test-list-dump
-          path: |
-            ${{ env.INSTALL_TEST_DIR }}/test_list_dump.lst
-
       - name: Intel CPU plugin func tests (parallel)
         run: |
           source ${INSTALL_DIR}/setupvars.sh
           python3 ${PARALLEL_TEST_SCRIPT} -e ${INSTALL_TEST_DIR}/ov_cpu_func_tests -c ${PARALLEL_TEST_CACHE} -w ${INSTALL_TEST_DIR} -s suite -rf 0 -- --gtest_print_time=1 --gtest_filter=*smoke*
-        timeout-minutes: 25
+        timeout-minutes: 45
 
       - name: Save tests execution time
         uses: actions/cache/save@v3
@@ -861,11 +852,11 @@ jobs:
         with:
           name: test-results-functional-cpu
           path: |
-            ${INSTALL_TEST_DIR}/logs/failed/*.log
-            ${INSTALL_TEST_DIR}/logs/crashed/*.log
-            ${INSTALL_TEST_DIR}/logs/hanged/*.log
-            ${INSTALL_TEST_DIR}/logs/interapted/*.log
-            ${INSTALL_TEST_DIR}/logs/disabled_tests.log
+            ${{ env.INSTALL_TEST_DIR }}/logs/failed/*.log
+            ${{ env.INSTALL_TEST_DIR }}/logs/crashed/*.log
+            ${{ env.INSTALL_TEST_DIR }}/logs/hanged/*.log
+            ${{ env.INSTALL_TEST_DIR }}/logs/interapted/*.log
+            ${{ env.INSTALL_TEST_DIR }}/logs/disabled_tests.log
           if-no-files-found: 'error'
 
   Python_Unit_Tests-Model_Optimizer_UT:
