--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -52,6 +52,8 @@ jobs:
       - name: Clone OpenVINO
         uses: actions/checkout@v4
         with:
+          repository: 'akashchi/openvino'
+          ref: 'ci/gha/introduce-conformance'
           path: 'openvino'
           submodules: 'true'
 
