--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -69,7 +69,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: ${{ env.OPENVINO_REPO }}
-          submodules: 'recursive'
+          submodules: 'true'
 
       - name: Clone OpenVINO Contrib
         uses: actions/checkout@v4
