--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -852,11 +852,8 @@ jobs:
         with:
           name: test-results-functional-cpu
           path: |
-            ${{ env.INSTALL_TEST_DIR }}/logs/disabled_tests.log
-            ${{ env.INSTALL_TEST_DIR }}/logs/failed/*.log
-            ${{ env.INSTALL_TEST_DIR }}/logs/crashed/*.log
-            ${{ env.INSTALL_TEST_DIR }}/logs/hanged/*.log
-            ${{ env.INSTALL_TEST_DIR }}/logs/interapted/*.log
+            ${{ env.INSTALL_TEST_DIR }}/**/*.log
+            !${{ env.INSTALL_TEST_DIR }}/**/passed/*.log
           if-no-files-found: 'error'
 
   Python_Unit_Tests-Model_Optimizer_UT:
