--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -355,19 +355,20 @@ jobs:
           python3 ${{ env.CONFORMANCE_TOOLS_DIR }}/run_conformance.py -ov=${{ env.INSTALL_DIR }}/tests \
             -d=${{ env.TEST_DEVICE }} \
             -t=${{ matrix.TEST_TYPE }} \
-            -w=${{ env.CONFORMANCE_ARTIFACTS_DIR }}
+            -w=${{ env.CONFORMANCE_ARTIFACTS_DIR }} \
+            -f=${{ env.CONFORMANCE_TOOLS_DIR }}/expected_failures_${{ env.TEST_DEVICE }}.csv ${{ github.ref_name == 'master' && '-u' || '' }}
 
       # Required due to: https://github.com/actions/cache/tree/main/restore#ensuring-proper-restores-and-save-happen-across-the-actions
       - name: Rename Expected Failures List
-        # if: ${{ github.ref_name == 'master' && 'true' || 'false' }}
-        if: ${{ always() }}
+        if: ${{ github.ref_name == 'master' && 'true' || 'false' }}
+        # if: ${{ always() }}
         run: |
           rm -rf ${{ env.CONFORMANCE_TOOLS_DIR }}/expected_failures_${{ env.TEST_DEVICE }}.csv
           cp ${{ env.CONFORMANCE_ARTIFACTS_DIR }}/${{ env.TEST_DEVICE }}_logs/logs/fix_priority.csv ${{ env.CONFORMANCE_TOOLS_DIR }}/expected_failures_${{ env.TEST_DEVICE }}.csv
 
       - name: Upload Expected Failures List
-        # if: ${{ github.ref_name == 'master' && 'true' || 'false' }}
-        if: ${{ always() }}
+        if: ${{ github.ref_name == 'master' && 'true' || 'false' }}
+        # if: ${{ always() }}
         uses: actions/cache/save@v3
         with:
           path: ${{ env.CONFORMANCE_TOOLS_DIR }}/expected_failures_${{ env.TEST_DEVICE }}.csv
