--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -59,10 +59,14 @@ jobs:
       CCACHE_MAXSIZE: 50G
 
     steps:
+      - name: Check sudo
+        run: |
+          if [ "$(id -u)" -eq 0 ]; then apt update && apt --assume-yes install sudo; fi
+
       - name: Install git
         run: |
-          apt-get update
-          apt-get install -y git git-lfs
+          sudo apt-get update
+          sudo apt-get install -y git git-lfs
 
       - name: Clone OpenVINO
         uses: actions/checkout@v4
@@ -91,8 +95,7 @@ jobs:
       - name: Install build dependencies
         run: |
           bash ${OPENVINO_REPO}/install_build_dependencies.sh
-          apt update
-          apt --assume-yes install openjdk-11-jdk libbz2-dev clang unzip libpugixml-dev libtbb-dev intel-opencl-icd ocl-icd-opencl-dev opencl-headers
+          sudo apt --assume-yes install openjdk-11-jdk libbz2-dev clang unzip libpugixml-dev libtbb-dev intel-opencl-icd ocl-icd-opencl-dev opencl-headers
 
           wget https://github.com/ninja-build/ninja/releases/download/v1.10.2/ninja-linux.zip
           unzip ninja-linux.zip
@@ -306,6 +309,10 @@ jobs:
       INSTALL_TEST_DIR: ${{ github.workspace }}/install/tests
 
     steps:
+      - name: Check sudo
+        run: |
+          if [ "$(id -u)" -eq 0 ]; then apt update && apt --assume-yes install sudo; fi
+
       - name: Create Directories
         run: |
           mkdir -p ${INSTALL_DIR} ${INSTALL_TEST_DIR}
@@ -316,8 +323,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          apt update
-          apt --assume-yes install openjdk-11-jdk libbz2-dev clang unzip libpugixml-dev libtbb-dev intel-opencl-icd ocl-icd-opencl-dev opencl-headers libsnappy-dev
+          sudo apt update
+          sudo apt --assume-yes install openjdk-11-jdk libbz2-dev clang unzip libpugixml-dev libtbb-dev intel-opencl-icd ocl-icd-opencl-dev opencl-headers libsnappy-dev
 
       - name: Download OpenVINO package
         uses: actions/download-artifact@v3
@@ -506,7 +513,6 @@ jobs:
       image: openvinogithubactions.azurecr.io/dockerhub/ubuntu:22.04
       volumes:
         - /mount/caches:/mount/caches
-      # options: -u 1001:1001
 
     env:
       OPENVINO_REPO: ${{ github.workspace }}/openvino
@@ -528,7 +534,7 @@ jobs:
 
       - name: Check sudo
         run: |
-          if [ "$(id -u)" -eq 0 ]; then apt update && apt install sudo; fi
+          if [ "$(id -u)" -eq 0 ]; then apt update && apt --assume-yes install sudo; fi
 
       - name: Install git
         run: |
@@ -787,13 +793,17 @@ jobs:
       PARALLEL_TEST_CACHE: ${{ github.workspace }}/install/tests/test_cache.lst
 
     steps:
+      - name: Check sudo
+        run: |
+          if [ "$(id -u)" -eq 0 ]; then apt update && apt --assume-yes install sudo; fi
+
       - name: Create Directories
         run: mkdir -p ${INSTALL_DIR} ${INSTALL_TEST_DIR}
 
       - name: Install dependencies
         run: |
-          apt update
-          apt --assume-yes install openjdk-11-jdk libbz2-dev clang unzip libpugixml-dev libtbb-dev intel-opencl-icd ocl-icd-opencl-dev opencl-headers
+          sudo apt update
+          sudo apt --assume-yes install openjdk-11-jdk libbz2-dev clang unzip libpugixml-dev libtbb-dev intel-opencl-icd ocl-icd-opencl-dev opencl-headers
 
       - name: Download OpenVINO package
         uses: actions/download-artifact@v3
