--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -494,22 +494,22 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install python dependencies
-        run: |
-          # For Python API
-          python3 -m pip install --upgrade pip
+      # - name: Install python dependencies
+      #   run: |
+      #     # For Python API
+      #     python3 -m pip install --upgrade pip
 
-          # For running ONNX frontend unit tests
-          python3 -m pip install --force-reinstall -r ${{ env.OPENVINO_REPO }}/src/frontends/onnx/tests/requirements.txt
+      #     # For running ONNX frontend unit tests
+      #     python3 -m pip install --force-reinstall -r ${{ env.OPENVINO_REPO }}/src/frontends/onnx/tests/requirements.txt
 
-          # For running TensorFlow frontend unit tests
-          python3 -m pip install -r ${{ env.OPENVINO_REPO }}/src/frontends/tensorflow/tests/requirements.txt
+      #     # For running TensorFlow frontend unit tests
+      #     python3 -m pip install -r ${{ env.OPENVINO_REPO }}/src/frontends/tensorflow/tests/requirements.txt
 
-          # For running Paddle frontend unit tests
-          python3 -m pip install -r ${{ env.OPENVINO_REPO }}/src/frontends/paddle/tests/requirements.txt
+      #     # For running Paddle frontend unit tests
+      #     python3 -m pip install -r ${{ env.OPENVINO_REPO }}/src/frontends/paddle/tests/requirements.txt
 
-          # For torchvision to OpenVINO preprocessing converter
-          python3 -m pip install -r ${{ env.OPENVINO_REPO }}/src/bindings/python/src/openvino/preprocess/torchvision/requirements.txt
+      #     # For torchvision to OpenVINO preprocessing converter
+      #     python3 -m pip install -r ${{ env.OPENVINO_REPO }}/src/bindings/python/src/openvino/preprocess/torchvision/requirements.txt
 
       - name: Download OpenVINO package
         uses: actions/download-artifact@v3
