--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -494,10 +494,10 @@ jobs:
         with:
           python-version: '3.11'
 
-      # - name: Install python dependencies
-      #   run: |
-      #     # For Python API
-      #     python3 -m pip install --upgrade pip
+      - name: Install python dependencies
+        run: |
+          python3 -m pip install --upgrade pip
+          python3 -m pip install --force-reinstall -r  ${{ env.INSTALL_TEST_DIR }}/constraints.txt
 
       #     # For running ONNX frontend unit tests
       #     python3 -m pip install --force-reinstall -r ${{ env.OPENVINO_REPO }}/src/frontends/onnx/tests/requirements.txt
