--- a/src/tests/ov_helpers/ov_snippets_models/CMakeLists.txt
+++ b/src/tests/ov_helpers/ov_snippets_models/CMakeLists.txt
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-set(TARGET_NAME snippets_ov_models)
+set(TARGET_NAME ov_snippets_models)
 
 set(PUBLIC_HEADERS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
 set(SNIPPETS_INCLUDES "$<TARGET_PROPERTY:openvino::snippets,SOURCE_DIR>/include")
@@ -25,7 +25,7 @@ addIeTarget(
                 openvino::runtime::dev
                 common_test_utils
                 openvino::snippets
-                lpt_ov_models
+                ov_lpt_models
         ADD_CPPLINT
         DEVELOPER_PACKAGE
             tests
