--- a/src/tests/ov_helpers/ov_lpt_models/CMakeLists.txt
+++ b/src/tests/ov_helpers/ov_lpt_models/CMakeLists.txt
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-set(TARGET_NAME lpt_ov_models)
+set(TARGET_NAME ov_lpt_models)
 
 set(PUBLIC_HEADERS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
 
