--- a/src/frontends/tensorflow/tests/CMakeLists.txt
+++ b/src/frontends/tensorflow/tests/CMakeLists.txt
@@ -16,9 +16,9 @@ ov_add_test_target(
         EXCLUDED_SOURCE_PATHS ${EXCLUDED_TESTS}
         DEPENDENCIES ${TF_TESTS_DEPENDENCIES}
         LINK_LIBRARIES
-            gtest_main_manifest 
-            frontend_shared_test_classes 
-            openvino_tensorflow_frontend 
+            gtest_main_manifest
+            frontend_shared_test_classes
+            openvino_tensorflow_frontend
             openvino_tensorflow_common
         ADD_CLANG_FORMAT
         LABELS
@@ -81,3 +81,8 @@ get_target_property(TENSORFLOW_FRONTEND_SRC_DIR openvino_tensorflow_frontend SOU
 
 add_subdirectory(standalone_build)
 add_dependencies(${TARGET_NAME} tensorflow_fe_standalone_build_test)
+
+install(FILES requirements.txt
+        DESTINATION tests/frontends/tensorflow
+        COMPONENT tests
+        EXCLUDE_FROM_ALL)
