--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -532,7 +532,7 @@ jobs:
         run: |
           python3 -m pip install --upgrade pip
           # For running ONNX frontend unit tests
-          python3 -m pip install --force-reinstall -r ${{ env.INSTALL_TEST_DIR }}/python/frontends/onnxs/requirements.txt
+          python3 -m pip install --force-reinstall -r ${{ env.INSTALL_TEST_DIR }}/python/frontends/onnx/requirements.txt
 
       - name: Install Python wheels
         run: |
@@ -700,6 +700,8 @@ jobs:
       - name: Install python dependencies
         run: |
           python3 -m pip install -r ${{ env.LAYER_TESTS_INSTALL_DIR }}/requirements.txt
+        # For running TensorFlow frontend unit tests
+          python3 -m pip install -r ${{ env.LAYER_TESTS_INSTALL_DIR }}/python/frontends/tensorflow/requirements.txt
 
       - name: PyTorch Layer Tests
         if: always()
