--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -94,12 +94,10 @@ jobs:
 
       - name: Install python dependencies
         run: |
-          # For Python API
+          # For Python API: build and wheel packaging
           python3 -m pip install --upgrade pip
-          python3 -m pip install Scons
           python3 -m pip install -r ${OPENVINO_REPO}/src/bindings/python/wheel/requirements-dev.txt
           python3 -m pip install -r ${OPENVINO_REPO}/src/bindings/python/requirements.txt
-          python3 -m pip install -r ${OPENVINO_REPO}/src/bindings/python/requirements_test.txt
 
           # For running Python API tests
           python3 -m pip install -r ${OPENVINO_REPO}/src/bindings/python/src/compatibility/openvino/requirements-dev.txt
@@ -109,7 +107,7 @@ jobs:
 
           # For running TensorFlow frontend unit tests
           python3 -m pip install -r ${OPENVINO_REPO}/src/frontends/tensorflow/tests/requirements.txt
-          
+
           # For running TensorFlow Lite frontend unit tests
           python3 -m pip install -r ${OPENVINO_REPO}/src/frontends/tensorflow_lite/tests/requirements.txt
 
@@ -127,7 +125,7 @@ jobs:
       - name: CMake configure
         run: |
           cmake \
-            -G ${{ env.CMAKE_GENERATOR }} \
+            -G "${{ env.CMAKE_GENERATOR }}" \
             -DENABLE_CPPLINT=OFF \
             -DENABLE_NCC_STYLE=OFF \
             -DENABLE_TESTS=ON \
@@ -143,6 +141,7 @@ jobs:
             -DBUILD_nvidia_plugin=OFF \
             -DCUSTOM_OPERATIONS="calculate_grid;complex_mul;fft;grid_sample;sparse_conv;sparse_conv_transpose" \
             -DOPENVINO_EXTRA_MODULES=${OPENVINO_CONTRIB_REPO}/modules \
+            -DCMAKE_INSTALL_PREFIX=${INSTALL_DIR} \
             -S ${OPENVINO_REPO} \
             -B ${BUILD_DIR}
 
@@ -155,44 +154,11 @@ jobs:
       - name: Show ccache stats
         run: ccache --show-stats
 
-      - name: Cmake Layer Tests
-        run: cmake -G ${{ env.CMAKE_GENERATOR }} -S ${OPENVINO_REPO}/tests/layer_tests -B ${BUILD_DIR}/layer_tests
-
-      - name: Cmake Model Hub Tests
-        run: cmake -G ${{ env.CMAKE_GENERATOR }} -S ${OPENVINO_REPO}/tests/model_hub_tests -B ${BUILD_DIR}/model_hub_tests
-
-      - name: Build Layer Tests
-        run: cmake --build ${BUILD_DIR}/layer_tests --parallel --config ${{ env.CMAKE_BUILD_TYPE }}
-
-      - name: Build Model Hub Tests
-        run: cmake --build ${BUILD_DIR}/model_hub_tests --parallel --config ${{ env.CMAKE_BUILD_TYPE }}
-
-      - name: Install wheel packages
-        run: cmake -DCOMPONENT=python_wheels -DCMAKE_INSTALL_PREFIX=${INSTALL_DIR} -P ${BUILD_DIR}/cmake_install.cmake
-
-      - name: Install Layer Tests
-        run: cmake -DCOMPONENT=tests -DCMAKE_INSTALL_PREFIX=${INSTALL_DIR} -P ${BUILD_DIR}/layer_tests/cmake_install.cmake
-
-      - name: Install Model Hub Tests
-        run: cmake -DCOMPONENT=tests -DCMAKE_INSTALL_PREFIX=${INSTALL_DIR} -P ${BUILD_DIR}/model_hub_tests/cmake_install.cmake
-
-      - name: Install python wheels
-        run: python3 -m pip install openvino-dev --find-links=${INSTALL_DIR}/tools
-
-      - name: Install tests
-        run: cmake -DCMAKE_INSTALL_PREFIX=${INSTALL_DIR} -DCOMPONENT=tests -P ${BUILD_DIR}/cmake_install.cmake
-
-      - name: Install OpenVINO
-        run: cmake -DCMAKE_INSTALL_PREFIX=${INSTALL_DIR} -P ${BUILD_DIR}/cmake_install.cmake
-
-      - name: CMake Samples Tests
-        run: cmake -G ${{ env.CMAKE_GENERATOR }} -S ${OPENVINO_REPO}/tests/samples_tests -B ${BUILD_DIR}/samples_tests
-
-      - name: Build Samples Tests
-        run: cmake --build ${BUILD_DIR}/samples_tests --config ${{ env.CMAKE_BUILD_TYPE }}
-
-      - name: Install Samples Tests
-        run: cmake -DCOMPONENT=tests -DCMAKE_INSTALL_PREFIX=${INSTALL_DIR} -P ${BUILD_DIR}/samples_tests/cmake_install.cmake
+      - name: Cmake install
+        run: |
+          cmake -P ${BUILD_DIR}/cmake_install.cmake
+          cmake -DCOMPONENT=tests -P ${BUILD_DIR}/cmake_install.cmake
+          cmake -DCOMPONENT=python_wheels -P ${BUILD_DIR}/cmake_install.cmake
 
       - name: Pack Artifacts
         run: |
@@ -206,9 +172,13 @@ jobs:
 
       - name: Build cpp samples
         run: ${SAMPLES_INSTALL_DIR}/cpp/build_samples.sh -i ${INSTALL_DIR} -b ${BUILD_DIR}/cpp_samples
+        env:
+          CMAKE_COMPILE_WARNING_AS_ERROR: 'ON'
 
       - name: Build c samples
         run: ${SAMPLES_INSTALL_DIR}/c/build_samples.sh -i ${INSTALL_DIR} -b ${BUILD_DIR}/c_samples
+        env:
+          CMAKE_COMPILE_WARNING_AS_ERROR: 'ON'
 
       #
       # Tests
@@ -294,7 +264,7 @@ jobs:
 
       - name: Install OpenVINO dependencies
         run: |
-          bash ${INSTALL_DIR}/install_dependencies/install_openvino_dependencies.sh -c=core -c=dev
+          bash ${INSTALL_DIR}/install_dependencies/install_openvino_dependencies.sh -c=core -y
 
       #
       # Tests
@@ -489,6 +459,9 @@ jobs:
 
           # For torchvision to OpenVINO preprocessing converter
           python3 -m pip install -r ${OPENVINO_REPO}/src/bindings/python/src/openvino/preprocess/torchvision/requirements.txt
+
+          # TODO: replace with Python API tests requirements
+          python3 -m pip install -r ${OPENVINO_REPO}/tools/mo/requirements_dev.txt
 
       - name: Download OpenVINO package
         uses: actions/download-artifact@v3
@@ -693,7 +666,7 @@ jobs:
 
       - name: Install OpenVINO dependencies
         run: |
-          bash ${INSTALL_DIR}/install_dependencies/install_openvino_dependencies.sh -c=core -c=dev
+          bash ${INSTALL_DIR}/install_dependencies/install_openvino_dependencies.sh -c=core -y
 
       - uses: actions/setup-python@v4
         with:
