--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -38,7 +38,6 @@ jobs:
       volumes:
         - /mount/caches:/mount/caches
     env:
-      DEBIAN_FRONTEND: noninteractive # to prevent apt-get from waiting user input
       CMAKE_BUILD_TYPE: 'Release'
       CMAKE_GENERATOR: 'Ninja Multi-Config'
       CMAKE_CXX_COMPILER_LAUNCHER: ccache
@@ -82,7 +81,7 @@ jobs:
       - name: Install build dependencies
         run: |
           bash ${OPENVINO_REPO}/install_build_dependencies.sh
-          apt --assume-yes install openjdk-11-jdk libbz2-dev clang unzip
+          apt --assume-yes install openjdk-11-jdk libbz2-dev unzip
 
           wget https://github.com/ninja-build/ninja/releases/download/v1.11.1/ninja-linux.zip
           unzip ninja-linux.zip
@@ -674,6 +673,8 @@ jobs:
 
       - name: Install python dependencies for run_parallel.py
         run: |
+          apt-get update
+          apt-get install -y libssl1.1 openssl
           python3 -m pip install --upgrade pip
           python3 -m pip install -r ${INSTALL_TEST_DIR}/functional_test_utils/requirements.txt
 
