--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -38,6 +38,7 @@ jobs:
       volumes:
         - /mount/caches:/mount/caches
     env:
+      DEBIAN_FRONTEND: noninteractive # to prevent apt-get from waiting user input
       CMAKE_BUILD_TYPE: 'Release'
       CMAKE_GENERATOR: 'Ninja Multi-Config'
       CMAKE_CXX_COMPILER_LAUNCHER: ccache
@@ -94,7 +95,6 @@ jobs:
       - name: Install python dependencies
         run: |
           # For Python API: build and wheel packaging
-          python3 -m pip install --upgrade pip
           python3 -m pip install -r ${OPENVINO_REPO}/src/bindings/python/wheel/requirements-dev.txt
           python3 -m pip install -r ${OPENVINO_REPO}/src/bindings/python/requirements.txt
 
@@ -262,8 +262,7 @@ jobs:
           popd
 
       - name: Install OpenVINO dependencies
-        run: |
-          bash ${INSTALL_DIR}/install_dependencies/install_openvino_dependencies.sh -c=core -y
+        run: ${INSTALL_DIR}/install_dependencies/install_openvino_dependencies.sh -c=core -y
 
       #
       # Tests
@@ -316,7 +315,7 @@ jobs:
         run: |
           source ${INSTALL_DIR}/setupvars.sh
           ${INSTALL_TEST_DIR}/ov_onnx_frontend_tests --gtest_print_time=1 \
-                --gtest_filter=-*IE_GPU*:*FrontEndLoadFromTest.testLoadFromTwoStreams*:*FrontEndLoadFromTest.testLoadFromTwoFiles* \
+                --gtest_filter=-*IE_GPU*:*FrontEndLoadFromTest.testLoadFromTwoStreams*:*FrontEndLoadFromTest.testLoadFromTwoFiles*:*onnx_dyn_shapes_expand* \
                 --gtest_output=xml:${INSTALL_TEST_DIR}/TEST-ONNXFrontend.xml
 
       - name: TensorFlow Common frontend tests
@@ -431,8 +430,7 @@ jobs:
 
     steps:
       - name: Create Directories
-        run: |
-          mkdir -p ${INSTALL_DIR} ${INSTALL_TEST_DIR}
+        run: mkdir -p ${INSTALL_DIR} ${INSTALL_TEST_DIR}
 
       - name: Install git
         run: |
@@ -454,8 +452,6 @@ jobs:
 
       - name: Install Python API tests dependencies
         run: |
-          python3 -m pip install --upgrade pip
-
           # For torchvision to OpenVINO preprocessing converter
           python3 -m pip install -r ${OPENVINO_REPO}/src/bindings/python/src/openvino/preprocess/torchvision/requirements.txt
 
@@ -485,8 +481,7 @@ jobs:
           popd
 
       - name: Install OpenVINO Python wheels
-        run: |
-          python3 -m pip install openvino-dev[mxnet,caffe,kaldi,onnx,tensorflow2] --find-links=${INSTALL_DIR}/tools
+        run: python3 -m pip install openvino-dev[mxnet,caffe,kaldi,onnx,tensorflow2] --find-links=${INSTALL_DIR}/tools
 
       #
       # Tests
@@ -513,7 +508,10 @@ jobs:
 
       - name: Docs Python snippets
         run: |
+          # to find 'snippets' module in docs
           export PYTHONPATH=${OPENVINO_REPO}/docs/:$PYTHONPATH
+          # for 'template' extension
+          export LD_LIBRARY_PATH=${INSTALL_TEST_DIR}
           python3 ${OPENVINO_REPO}/docs/snippets/main.py
 
       - name: Model Optimizer unit tests
@@ -664,19 +662,19 @@ jobs:
           popd
 
       - name: Install OpenVINO dependencies
+        run: bash ${INSTALL_DIR}/install_dependencies/install_openvino_dependencies.sh -c=core -y
+
+      - name: Install 'actions/setup-python@v4' dependencies
         run: |
-          bash ${INSTALL_DIR}/install_dependencies/install_openvino_dependencies.sh -c=core -y
+          apt-get update
+          apt-get install -y libssl1.1 openssl
 
       - uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
       - name: Install python dependencies for run_parallel.py
-        run: |
-          apt-get update
-          apt-get install -y libssl1.1 openssl
-          python3 -m pip install --upgrade pip
-          python3 -m pip install -r ${INSTALL_TEST_DIR}/functional_test_utils/requirements.txt
+        run: python3 -m pip install -r ${INSTALL_TEST_DIR}/functional_test_utils/requirements.txt
 
       - name: Restore tests execution time
         uses: actions/cache/restore@v3
@@ -726,8 +724,7 @@ jobs:
 
     steps:
       - name: Create Directories
-        run: |
-          mkdir -p ${{ env.INSTALL_DIR }} ${{ env.INSTALL_TEST_DIR }}
+        run: mkdir -p ${{ env.INSTALL_DIR }} ${{ env.INSTALL_TEST_DIR }}
 
       - uses: actions/setup-python@v4
         with:
@@ -799,9 +796,10 @@ jobs:
           sudo rm -rf /opt/ghc
           echo "Available storage:"
           df -h
+
       - name: Create Directories
-        run: |
-          mkdir -p ${{ env.INSTALL_DIR }} ${{ env.INSTALL_TEST_DIR }}
+        run: mkdir -p ${{ env.INSTALL_DIR }} ${{ env.INSTALL_TEST_DIR }}
+
       - uses: actions/setup-python@v4
         with:
           python-version: '3.11'
@@ -848,7 +846,7 @@ jobs:
           TEST_DEVICE: CPU
 
       - name: Available storage after tests
-        run:  |
+        run: |
           echo "Available storage:"
           df -h
           du -h -d0 ~/.cache ~/*
