--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -82,7 +82,10 @@ jobs:
       - name: Install build dependencies
         run: |
           bash ${OPENVINO_REPO}/install_build_dependencies.sh
-          apt --assume-yes install openjdk-11-jdk libbz2-dev unzip
+          # openjdk-11-jdk - Java API
+          # libssl1.1 - 'python3 -m pip' in self-hosted runner
+          # unzip - to download ninja
+          apt --assume-yes install openjdk-11-jdk libssl1.1 unzip
 
           wget https://github.com/ninja-build/ninja/releases/download/v1.11.1/ninja-linux.zip
           unzip ninja-linux.zip
@@ -315,7 +318,7 @@ jobs:
         run: |
           source ${INSTALL_DIR}/setupvars.sh
           ${INSTALL_TEST_DIR}/ov_onnx_frontend_tests --gtest_print_time=1 \
-                --gtest_filter=-*IE_GPU*:*FrontEndLoadFromTest.testLoadFromTwoStreams*:*FrontEndLoadFromTest.testLoadFromTwoFiles*:*onnx_dyn_shapes_expand* \
+                --gtest_filter=-*IE_GPU*:*FrontEndLoadFromTest.testLoadFromTwoStreams*:*FrontEndLoadFromTest.testLoadFromTwoFiles*:*dyn* \
                 --gtest_output=xml:${INSTALL_TEST_DIR}/TEST-ONNXFrontend.xml
 
       - name: TensorFlow Common frontend tests
@@ -511,7 +514,7 @@ jobs:
           # to find 'snippets' module in docs
           export PYTHONPATH=${OPENVINO_REPO}/docs/:$PYTHONPATH
           # for 'template' extension
-          export LD_LIBRARY_PATH=${INSTALL_TEST_DIR}
+          export LD_LIBRARY_PATH=${INSTALL_TEST_DIR}:$LD_LIBRARY_PATH
           python3 ${OPENVINO_REPO}/docs/snippets/main.py
 
       - name: Model Optimizer unit tests
@@ -667,7 +670,7 @@ jobs:
       - name: Install 'actions/setup-python@v4' dependencies
         run: |
           apt-get update
-          apt-get install -y libssl1.1 openssl
+          apt-get install -y libssl1.1
 
       - uses: actions/setup-python@v4
         with:
